version/0.12/_sources/api/ansys/health/heart/settings/material/material/ISO.rst.txt






:class:`ISO`
============

.. py:class:: ansys.health.heart.settings.material.material.ISO

   
   Isotropic module of MAT_295.
















   ..
       !! processed by numpydoc !!



.. py:currentmodule:: ISO

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~itype`
            - Isotropic material type.
          * - :py:attr:`~beta`
            - Volumetric response coefficient.
          * - :py:attr:`~nu`
            - Possion's ratio.
          * - :py:attr:`~k1`
            - k1 for HGO model.
          * - :py:attr:`~k2`
            - k2 for HGO model.
          * - :py:attr:`~mu1`
            - mu1 for Ogden model.
          * - :py:attr:`~alpha1`
            - alpha1 for Ogden model.
          * - :py:attr:`~kappa`
            - Bulk modulus.



   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__post_init__`
            - Test inputs.




Import detail
-------------

.. code-block:: python

    from ansys.health.heart.settings.material.material import ISO


Attribute detail
----------------

.. py:attribute:: itype
   :type:  int
   :value: -3


   
   Isotropic material type.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: beta
   :type:  float
   :value: 0.0


   
   Volumetric response coefficient.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: nu
   :type:  float
   :value: 0.499


   
   Possion's ratio.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: k1
   :type:  float
   :value: None


   
   k1 for HGO model.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: k2
   :type:  float
   :value: None


   
   k2 for HGO model.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: mu1
   :type:  float
   :value: None


   
   mu1 for Ogden model.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: alpha1
   :type:  float
   :value: None


   
   alpha1 for Ogden model.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: kappa
   :type:  float
   :value: None


   
   Bulk modulus.
















   ..
       !! processed by numpydoc !!



Method detail
-------------

.. py:method:: __post_init__()

   
   Test inputs.
















   ..
       !! processed by numpydoc !!




