version/0.16/_sources/api/ansys/health/heart/settings/material/material/ISO.rst.txt






:class:`ISO`
============


.. py:class:: ansys.health.heart.settings.material.material.ISO(/, **data: Any)

   Bases: :py:obj:`pydantic.BaseModel`


   
   Isotropic module of MAT_295.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ISO

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~validate_material_parameters`
            - Validate that required parameters are provided based on itype.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~itype`
            - Isotropic material type.
          * - :py:attr:`~beta`
            - Volumetric response coefficient.
          * - :py:attr:`~nu`
            - Possion's ratio.
          * - :py:attr:`~k1`
            - k1 for HGO model.
          * - :py:attr:`~k2`
            - k2 for HGO model.
          * - :py:attr:`~mu1`
            - mu1 for Ogden model.
          * - :py:attr:`~alpha1`
            - alpha1 for Ogden model.
          * - :py:attr:`~kappa`
            - Bulk modulus.






Import detail
-------------

.. code-block:: python

    from ansys.health.heart.settings.material.material import ISO


Attribute detail
----------------

.. py:attribute:: itype
   :type:  Literal[-3, -1, 1, 3]
   :value: -3


   
   Isotropic material type.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: beta
   :type:  float
   :value: 0.0


   
   Volumetric response coefficient.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: nu
   :type:  float
   :value: None


   
   Possion's ratio.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: k1
   :type:  Optional[float]
   :value: None


   
   k1 for HGO model.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: k2
   :type:  Optional[float]
   :value: None


   
   k2 for HGO model.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: mu1
   :type:  Optional[float]
   :value: None


   
   mu1 for Ogden model.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: alpha1
   :type:  Optional[float]
   :value: None


   
   alpha1 for Ogden model.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: kappa
   :type:  Optional[float]
   :value: None


   
   Bulk modulus.
















   ..
       !! processed by numpydoc !!



Method detail
-------------

.. py:method:: validate_material_parameters()

   
   Validate that required parameters are provided based on itype.
















   ..
       !! processed by numpydoc !!




